pica: fix source overlaps content in stream view

--- a/pica/components/css/pi-items-view.css
+++ b/pica/components/css/pi-items-view.css
@@ -217,6 +217,11 @@
   overflow: hidden;
 }
 
+.column .source {
+  position: relative;
+  padding: 20px 0;
+}
+
 .column #more {
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
